fix on popover with text too long

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -573,6 +573,11 @@ span.fc-time {
 	display: flex;
 }
 
+div.popover-body {
+	max-height: 150px !important;
+	overflow-y: auto;
+}
+
 
 @media print {
 
